--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,1 +1,11 @@
 /*Custom CSS goes here*/
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding-left: 20px;
+}
