--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,4 +1,7 @@
-/*Custom CSS goes here*/
+/*File name- app.css*/
+/*Name-Abdulghafor Nurali*/
+/*student ID:300655894*/
+/*DATE-2-16-19*/
 
 .footer {
     position: fixed;
