--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,14 +1,15 @@
 <% include ./partials/header %>
     <div class="container">
       <div class="jumbotron">
-        <h1 class="display-4">Welcome to my Portfolie page</h1>
+        <h1 class="display-4">Welcome to the About me page</h1>
         <p class="myAbout">
             My name is Abdulghafor Nurali, I am a Software Engineering <br>
             Technology student at Centennial College. I have experience<br>
             in working with C#, Java, Python, ASP.NET, Javascript and PHP.
             <br>
             <br>
-            <img src="/Assets/images/my.jpeg" width="290" height="300" />
+            <img src="/Assets/images/my.jpeg" width="320" height="300" />
+            <br><a class="button" href="Assets/images/ABDULGHAFOR_NURALI_Resume.pdf">View My Resume</a><br><br>
         </p>
         <p>
         </p>
