--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -16,7 +16,12 @@
                     name="lastName" required>
                 </div>
                 <div class="form-group">
-                    <label for="EmailTextField">Your Email</label>
+                    <label for="EmailTextField">Contact Number</label>
+                    <input type="text" class="form-control" id="EmailTextField" placeholder="Enter Your Contact Number"
+                    name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="EmailTextField">Email</label>
                     <input type="text" class="form-control" id="EmailTextField" placeholder="Enter Your Email"
                     name="email" required>
                 </div>
