all other changes

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -16,7 +16,7 @@
                     name="lastName" required>
                 </div>
                 <div class="form-group">
-                    <label for="EmailTextField">Contact Number</label>
+                    <label for="ConctactTextField">Contact Number</label>
                     <input type="text" class="form-control" id="EmailTextField" placeholder="Enter Your Contact Number"
                     name="email" required>
                 </div>
