--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,8 @@
       <div class="jumbotron">
         <h1 class="display-4">Welcome to my <%= title %> page</h1>
         <p class="lead">
-            Yesterday I was clever, so I wanted to change the world. Today I am wise, so I am changing myself 
-            <br>Rumi
+            Yesterday I was clever, so I wanted to change the world. Today I am wise, so I am changing myself! 
+            <br>"Rumi"
         </p>
         <hr class="my-4" />
         <p>
