--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,7 +1,8 @@
+
 <% include ./partials/header %>
     <div class="container">
       <div class="jumbotron">
-        <h1 class="display-4">Welcome to my Portfolie page</h1>
+        <h1 class="display-4">Welcome to my Services page</h1>
         <p class="myservices">
             I am a very good web developer, the tool that I use to develope a website is ASP.NET<br>
             I can also design and have a good knowledge in regards to making Android application<br>
