all other changes made

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,15 +1,38 @@
 <% include ./partials/header %>
     <div class="container">
       <div class="jumbotron">
-        <h1 class="display-4">Welcome to the About me page</h1>
+        <h1 class="display-4">My name is Abdulghafor Nurali</h1>
         <p class="myAbout">
-            My name is Abdulghafor Nurali, I am a Software Engineering <br>
-            Technology student at Centennial College. I have experience<br>
-            in working with C#, Java, Python, ASP.NET, Javascript and PHP.
+            Computing has always been my major interest, from a young age I've always had<br>
+            a keen interest in programming. Programming has always been my strongest subject<br> 
+            and I would definitely say that it is the field I want to work in. Computers are <br>
+            such a large part of life these days and they reach into every aspect, I would<br>
+            love to be a part of the development of software that makes changes to the way<br>
+            people work with technology.<br>
+            <br>
+            I am currently a Software Engineering technology student at Centennial College.<br>
+            Here at Centennial College I have gained experience in developing softwares with<br>
+            an expansive knowledge of languages, including HTML, CSS, PHP, JavaScript, C#<br>
+            Java, ASP.NET and SQL. <br>
+            <br>
+            I spend most of my time that I'm not in college or at work socialising with friends.<br>
+            I love to go see films with a good group of friends or just to sit and catch up on <br>
+            what's been going on with everyone. I enjoy playing soccer and basketball as I like to<br>
+            have a balance between technology and physical activities.<br>
+            <br>
+            Playing Harmonium along with singing is a hobby that I love.<br>
+            <br>
+            I look forward to applying my knowledge of computers ready<br>
+            for a job in the software development industry.
             <br>
             <br>
-            <img src="/Assets/images/my.jpeg" width="320" height="300" />
-            <br><a class="button" href="Assets/images/ABDULGHAFOR_NURALI_Resume.pdf">View My Resume</a><br><br>
+            <img src="/Assets/images/my.jpeg" class="center" width="320" height="300" />
+            <br>
+            <br>
+            <a class="btn btn-primary btn-lg" href="Assets/images/Abdulghafor_Nurali_Resume.pdf">View My Resume</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a class="btn btn-primary btn-lg" href="Assets/images/Refrences.pdf">View My Refrences</a>
+            <a class="btn btn-primary btn-lg" style="float: right;" href="Assets/images/Abdulghafor_Nurali_Cover_Letter.pdf">View My Cover Letter</a>
         </p>
         <p>
         </p>
