--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,10 @@
         <p class="lead">
             Yesterday I was clever, so I wanted to change the world. Today I am wise, so I am changing myself! 
             <br>"Rumi"
+
+            <br>
+            <br>
+            <img src="/Assets/images/seedling-growth.jpg" class="plant" width="420" height="300" />
         </p>
         <hr class="my-4" />
         <p>
