--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <div class="footer">
-        <h6>&copy; Abdulghafor Nurali COMP308 Assignment 1</h6>
+        <h6>&copy; EMPS 102-006 Career Portfolio</h6>
         <div class="githubLink">
           <a href="https://github.com/Abdul025"> <i class="fa fa-2lg fa-github fa-2x"></i></a>
     </div>
