minor changes made

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,11 +11,11 @@
             people work with technology.<br>
             <br>
             I am currently a Software Engineering technology student at Centennial College.<br>
-            Here at Centennial College I have gained experience in developing softwares with<br>
+            Here at Centennial College, I have gained experience in developing software with<br>
             an expansive knowledge of languages, including HTML, CSS, PHP, JavaScript, C#<br>
             Java, ASP.NET and SQL. <br>
             <br>
-            I spend most of my time that I'm not in college or at work socialising with friends.<br>
+            I spend most of my time that I'm not in college or at work socializing with friends.<br>
             I love to go see films with a good group of friends or just to sit and catch up on <br>
             what's been going on with everyone. I enjoy playing soccer and basketball as I like to<br>
             have a balance between technology and physical activities.<br>
