--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -42,7 +42,7 @@
 
     <fieldset>
     <legend>Contact Details:</legend>
-     <p>3105 Wilson Avenue, Suite: 401
+     <p>3105 Wilson Avenue,
           <br>Toronto , ON M9N 1K7
           <br>Business Number: 416-325-0012
           <br>
