--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -3,7 +3,7 @@
     <div class="jumbotron">
         <h1 class="display-4">Welcome to my Projects page</h1>
         <p class="myProjects">
-            These are some of the college projects that I made and are Android based applications<br><br>
+            These are some of the college projects that I made and are Android-based applications<br><br>
             <img src="/Assets/images/project1-2.jpeg" width="290" height="300" /> &nbsp;<img src="/Assets/images/project1.jpeg"
                 width="290" height="300" /> &nbsp;<img src="/Assets/images/project2.jpeg" width="290" height="300" />
             <br><br>
