--- a/views/services.ejs
+++ b/views/services.ejs
@@ -4,8 +4,8 @@
       <div class="jumbotron">
         <h1 class="display-4">Welcome to my Services page</h1>
         <p class="myservices">
-            I am a very good web developer, the tool that I use to develope a website is ASP.NET<br>
-            I can also design and have a good knowledge in regards to making Android application<br>
+            I am a very good web developer, the tool that I use to develop a website is ASP.NET<br>
+            I can also design and have good knowledge in regard to making an Android application<br>
             using Android Studio.
             <br>
             <br>
