new image added

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -26,7 +26,7 @@
             for a job in the software development industry.
             <br>
             <br>
-            <img src="/Assets/images/my.jpeg" class="center" width="320" height="300" />
+            <img src="/Assets/images/myImage.jpeg" class="center" width="420" height="500" />
             <br>
             <br>
             <a class="btn btn-primary btn-lg" href="Assets/images/Abdulghafor_Nurali_Resume.pdf">View My Resume</a>
