--- a/views/about.ejs
+++ b/views/about.ejs
@@ -30,9 +30,10 @@
             <br>
             <br>
             <a class="btn btn-primary btn-lg" href="Assets/images/Abdulghafor_Nurali_resume.pdf">View My Resume</a>
-            
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a class="btn btn-primary btn-lg" href="Assets/images/Refrences.pdf">View My Refrences</a>
-            <a class="btn btn-primary btn-lg" style="float: right;" href="Assets/images/Abdulghafor_Nurali_Cover_Letter.pdf">View My Cover Letter</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a class="btn btn-primary btn-lg" href="Assets/images/Abdulghafor_Nurali_Cover_Letter.pdf">View My Cover Letter</a>
         </p>
         <p>
         </p>
